--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -1,47 +1,47 @@
 #game-4 #title {
-  color: #FFFFFF;
-  font-size: 3rem;
+  margin-bottom: var(--spacing-4);
+
+  color: var(--color-neutral-100);
+  font-size: var(--text-5xl);
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 #game-4 #main {
   display: flex;  
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 #game-4 .units {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
   text-align: center;
 }
 
 #game-4 .units > div {
   display: flex;
   align-items: center;
+  gap: var(--spacing-8);
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
+  padding: var(--spacing-4);
 }
 
 #game-4 .units > div > span {
-  color: #FFFFFF;
+  color: var(--color-neutral-100);
+  font-size: var(--text-2xl);
   font-weight: bold;
-  font-size: 1.5rem;
 }
 
 #game-4 .battle {
   display: flex;
-  gap: 5rem;
+  gap: var(--spacing-20);
   justify-content: space-between;
 }
 
 #game-4 .battle > div {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-4);
   flex-direction: column;
 }
 
@@ -60,23 +60,17 @@
 }
 
 #game-4 .battle-unit .unit-life {
-  height: 1rem;
   width: 100%;
   display: flex;
-}
-
-.battle-unit .unit-name {
-  background-color: #306B7F;
-  text-align: center;
-  color: #FFFFFF
+  height: var(--spacing-4);
 }
 
 .battle-unit .unit-life span:first-child {
-  background-color: #00FC42;
+  background-color: var(--color-green-500);
 }
 
 .battle-unit .unit-life span:last-child {
-  background-color: #F41A28;
+  background-color: var(--color-red-500);
 }
 
 .battle-unit[data-life="0"] .unit-life span:first-child { width: 0% }
@@ -93,73 +87,78 @@
 
 #game-4 #selected-units {
   display: flex;
-  gap: 2rem;
+  gap: var(--spacing-8);
 }
 
 #game-4 .select-unit.strong {
-  border-color: #00FC42;
+  border-color: var(--color-green-500);
 }
 
 #game-4 .select-unit.weak {
-  border-color: #F41A28;
+  border-color: var(--color-red-500);
 }
 
 #game-4 #selected-units div {
-  border: 5px solid #FFFFFF;
   width: 90px;
   height: 100px;
   position: relative;
+
+  border: 5px solid var(--color-neutral-100);
 }
 
 #game-4 .result-title {
-  font-size: 4rem;
-  color: #FFFB47;
-  margin-block: 4rem;
+  margin-block: var(--spacing-16);
+
+  font-size: var(--text-7xl);
 }
 
 #game-4 .result-units {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
-  font-size: 4rem;
-  margin-block: 4rem;
+  gap: var(--spacing-20);
+  margin-block: var(--spacing-16);
+
+  font-size: var(--spacing-16);
 }
 
 #game-4 .result-winning-units {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-4);
 }
 
 #game-4 .result-losing-units {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-4);
+
   filter: grayscale(1)
 }
 
 #game-4 .result-draws-units {
   display: flex;
+  gap: var(--spacing-4);
   flex-direction: column;
-  gap: 1rem;
-  filter: grayscale(.5)
+
+  filter: grayscale(.5);
 }
 
 #game-4 .result-draws-units > div {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-4);
 }
 
 #game-4 .select-unit {
+  width: 150px;
   display: flex;
-  flex-direction: column;
+  cursor: pointer;
   width: fit-content;
   align-items: center;
-  background-color: #306B7F;
+  flex-direction: column;
   border: 5px solid transparent;
-  cursor: pointer;
-
+  
+  background-color: var(--color-blue-500);
+  
   transition: all .5s;
 
-  width: 150px;
 }
 
 #game-4 .select-unit img {
@@ -168,26 +167,26 @@
 }
 
 #game-4 .select-unit:hover {
-  border-color: #FFFB47;
+  border-color: var(--color-yellow-500);
 }
 
 #game-4 .select-unit span {
-  font-size: 1rem;
-  color: #FFFFFF;
+  color: var(--color-neutral-100);
+  font-size: var(--text-base);
   font-weight: bold;
 }
 
 #game-4 .selected-unit {
   display: flex;
-  flex-direction: column;
   width: fit-content;
   align-items: center;
-  background-color: #00FC42;
+  flex-direction: column;
   border: 5px solid transparent;
+  
+  background-color: var(--color-green-500);
   cursor: pointer;
-
+  
   position: absolute;
-
   top: -5px;
   left: -5px;
   bottom: -5px;
@@ -195,7 +194,7 @@
 }
 
 #game-4 .selected-unit:hover {
-  background-color: #F41A28;
+  background-color: var(--color-red-500);
 }
 
 #game-4 .selected-unit img {
@@ -204,7 +203,7 @@
 }
 
 #game-4 .selected-unit span {
-  font-size: .8rem;
-  color: #000000;
+  color: var(--color-neutral-900);
+  font-size: var(--text-sm);
   font-weight: bold;
 }
